# ts-truediff-test

./: CMakeLists.txt  README.md
benchmark_data/: keras_bench.csv  keras_bench_inc.csv  keras_bench_scala.csv
edits/: gen_diff_files.py  main.py
tree-sitter-bench/: CMakeLists.txt  bench.c  bench.h  csv_util.h
tree-sitter-bench-inc2/: CMakeLists.txt  bench.c  bench.h  csv_util.h  dirs.h
tree-sitter-bench-inc2/libs/tree-sitter-python/: tokens.h
tree-sitter-bench/libs/: debug.h
tree-sitter-bench/libs/tree-sitter-python/: parser.c  scanner.cc
tree-sitter-bench/libs/tree-sitter/includes/: api.h
tree-sitter-gtest/: CMakeLists.txt  IncrementalExpTest.cpp  PQueueTest.cpp  SimpleExpTest.cpp  SimpleJavaTest.cpp
tree-sitter-gtest/libs/: debug.h  util.h
tree-sitter-gtest/libs/pqueue/: pqueue.c  pqueue.h
tree-sitter-gtest/libs/tree-sitter-exp/: grammar.json  node-types.json  parser.c
tree-sitter-gtest/libs/tree-sitter-java/: parser.c
tree-sitter-gtest/libs/tree-sitter/includes/: api.h
